// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DailyReportが正しく表示される > shareをクリックすると共有用の画面が表示される 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      Update
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      html
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      text
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      share
    </button>
    <div>
      <div>
        <div>
          <div
            style="white-space: pre-wrap; word-wrap: break-word; text-align: left; justify-content: left;"
          >
            12:34 RAW TEXT
          </div>
          <div>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
              href="https://x.com/intent/post?text=RAW%20TEXT"
              style="margin: 5px; text-transform: none; float: right;"
              tabindex="0"
            >
              Tweetする
            </a>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
              style="margin: 5px; text-transform: none; float: right;"
              tabindex="0"
              type="button"
            >
              コピーする
            </button>
          </div>
          <hr
            style="clear: both;"
          />
        </div>
        <div>
          <div
            style="white-space: pre-wrap; word-wrap: break-word; text-align: left; justify-content: left;"
          >
            13:15 hoge
          </div>
          <div>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
              href="https://x.com/intent/post?text=hoge"
              style="margin: 5px; text-transform: none; float: right;"
              tabindex="0"
            >
              Tweetする
            </a>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
              style="margin: 5px; text-transform: none; float: right;"
              tabindex="0"
              type="button"
            >
              コピーする
            </button>
          </div>
          <hr
            style="clear: both;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DailyReportが正しく表示される > textをクリックするとtextが表示される 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      Update
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      html
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      text
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      share
    </button>
    <div>
      <div
        style="white-space: pre-wrap; word-wrap: break-word; text-align: left; justify-content: left;"
      >
        RAW TEXT
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DailyReportが正しく表示される > ディフォルトではhtmlが表示される 1`] = `
<DocumentFragment>
  <div>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      Update
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      html
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      text
    </button>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButton-colorSecondary css-1mgi02a-MuiButtonBase-root-MuiButton-root"
      style="margin: 3px; text-transform: none;"
      tabindex="0"
      type="button"
    >
      share
    </button>
    <div>
      <div
        style="white-space: normal; overflow: hidden; text-align: left; justify-content: left;"
      >
        <span>
          HTML TEXT
          <span />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
